--- a/Emoji Dictionary/Base.lproj/Main.storyboard
+++ b/Emoji Dictionary/Base.lproj/Main.storyboard
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Emoji_Dictionary" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +16,30 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="YMb-AW-zbd">
+                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="YMb-AW-zbd" secondAttribute="trailing" id="DbQ-fU-XlI"/>
+                            <constraint firstItem="YMb-AW-zbd" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="Hde-S2-1pQ"/>
+                            <constraint firstItem="YMb-AW-zbd" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="itT-pO-JFS"/>
+                            <constraint firstItem="YMb-AW-zbd" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="kLJ-LZ-rET"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="YMb-AW-zbd" secondAttribute="bottom" id="rOB-Rp-iEZ"/>
+                            <constraint firstAttribute="trailing" secondItem="YMb-AW-zbd" secondAttribute="trailing" id="u9w-eS-pgq"/>
+                            <constraint firstItem="YMb-AW-zbd" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="urm-ld-cU5"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="emojiViewTable" destination="YMb-AW-zbd" id="o1N-Sm-5OI"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="527" y="423"/>
         </scene>
     </scenes>
 </document>
