--- a/Emoji Dictionary/Base.lproj/Main.storyboard
+++ b/Emoji Dictionary/Base.lproj/Main.storyboard
@@ -39,7 +39,70 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="527" y="423"/>
+            <point key="canvasLocation" x="371" y="436"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="sp5-Yf-UWK">
+            <objects>
+                <viewController id="9ak-Lg-my4" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="tsy-cq-tR6"/>
+                        <viewControllerLayoutGuide type="bottom" id="Rha-Av-NYu"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="BXA-t9-d61">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="😂" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Gf-Yy-QUL">
+                                <rect key="frame" x="197" y="58" width="206" height="260"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="200"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This is laughing Face" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KfQ-3k-pGP">
+                                <rect key="frame" x="-42" y="-21" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                                <variation key="heightClass=regular" misplaced="YES">
+                                    <rect key="frame" x="220" y="348" width="160" height="42"/>
+                                </variation>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="KfQ-3k-pGP" firstAttribute="centerX" secondItem="BXA-t9-d61" secondAttribute="centerX" id="8d2-8c-mxv"/>
+                            <constraint firstItem="9Gf-Yy-QUL" firstAttribute="top" secondItem="tsy-cq-tR6" secondAttribute="bottom" constant="40" id="TPe-67-yQz"/>
+                            <constraint firstItem="KfQ-3k-pGP" firstAttribute="top" secondItem="9Gf-Yy-QUL" secondAttribute="bottom" constant="55" id="XMF-XL-sCj"/>
+                            <constraint firstItem="9Gf-Yy-QUL" firstAttribute="centerX" secondItem="BXA-t9-d61" secondAttribute="centerX" id="peb-yZ-BkP"/>
+                            <constraint firstItem="KfQ-3k-pGP" firstAttribute="centerX" secondItem="9Gf-Yy-QUL" secondAttribute="centerX" id="x2r-4A-39e"/>
+                            <constraint firstItem="9Gf-Yy-QUL" firstAttribute="centerX" secondItem="BXA-t9-d61" secondAttribute="centerX" id="x9H-de-88p"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="KfQ-3k-pGP"/>
+                            </mask>
+                            <mask key="constraints">
+                                <exclude reference="8d2-8c-mxv"/>
+                                <exclude reference="XMF-XL-sCj"/>
+                                <exclude reference="x2r-4A-39e"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=regular">
+                            <mask key="subviews">
+                                <include reference="KfQ-3k-pGP"/>
+                            </mask>
+                            <mask key="constraints">
+                                <include reference="8d2-8c-mxv"/>
+                                <include reference="XMF-XL-sCj"/>
+                                <include reference="x2r-4A-39e"/>
+                            </mask>
+                        </variation>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yia-9E-ehq" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1021" y="435.75"/>
         </scene>
     </scenes>
 </document>
