Adding navigation controller to view Emoji

--- a/Emoji Dictionary/Base.lproj/Main.storyboard
+++ b/Emoji Dictionary/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="aIA-m1-kh6">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -20,6 +20,9 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="YMb-AW-zbd">
                                 <rect key="frame" x="0.0" y="20" width="600" height="580"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <variation key="heightClass=regular" misplaced="YES">
+                                    <rect key="frame" x="0.0" y="20" width="600" height="780"/>
+                                </variation>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -33,13 +36,15 @@
                             <constraint firstItem="YMb-AW-zbd" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="urm-ld-cU5"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="wkQ-ER-S6c"/>
                     <connections>
                         <outlet property="emojiViewTable" destination="YMb-AW-zbd" id="o1N-Sm-5OI"/>
+                        <segue destination="9ak-Lg-my4" kind="show" identifier="emjoiDefinition" id="BoA-Yw-uc9"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="371" y="436"/>
+            <point key="canvasLocation" x="1183" y="435.75"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="sp5-Yf-UWK">
@@ -102,7 +107,25 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yia-9E-ehq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1021" y="435.75"/>
+            <point key="canvasLocation" x="1833" y="435.75"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="dl2-ac-ABr">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="aIA-m1-kh6" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="ujc-ge-svh">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="90D-pg-Lnm"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ec0-HZ-KkK" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="371" y="435.75"/>
         </scene>
     </scenes>
 </document>
